<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backapp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Titulo e subtitulo -->
    <TextView
        android:id="@+id/textCabecalho"
        android:text="@string/textCabecalho"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/atributos"
        android:textSize="30sp"
        android:layout_marginTop="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textSubCabecalho"
        android:text="@string/textSubCabecalho"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/name_cabecalho"
        android:textSize="20sp"
        android:layout_marginTop="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Título para Pratos -->
    <TextView
        android:id="@+id/tvPratos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pratos"
        android:textColor="@color/atributos"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/atributos"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/tvPratos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Opção: Arroz de Camarão -->
    <LinearLayout
        android:id="@+id/llArrozCamarao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/name_cabecalho"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvPratos"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <CheckBox
            android:id="@+id/cbArrozCamarao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/name_cabecalho"
            android:text="@string/arroz_camarao"
            android:layout_weight="@integer/valor_arroz_camarao"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Opção: Lagosta na Brasa -->
    <LinearLayout
        android:id="@+id/llLagostaNaBrasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/name_cabecalho"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvPratos"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <CheckBox
            android:id="@+id/cbLagostaNaBrasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/name_cabecalho"
            android:text="@string/lagosta_brasa"
            android:layout_weight="@integer/valor_picanha_brasa"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Opção: Carne de Sol -->
    <LinearLayout
        android:id="@+id/llCarneSol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@color/name_cabecalho"
        app:layout_constraintTop_toBottomOf="@id/llArrozCamarao"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <CheckBox
            android:id="@+id/cbCarneSol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@android:color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carne_sol"
            android:layout_weight="@integer/valor_carne_sol"
            android:textColor="@color/name_cabecalho"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Opção: Picanha na Brasa -->
    <LinearLayout
        android:id="@+id/llPicanhaBrasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llCarneSol"
        android:layout_marginTop="8dp"
        android:textColor="@color/name_cabecalho"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <CheckBox
            android:id="@+id/cbPicanhaBrasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@android:color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picanha_brasa"
            android:layout_weight="@integer/valor_picanha_brasa"
            android:layout_gravity="center"
            android:textColor="@color/name_cabecalho"
            />
    </LinearLayout>

    <!-- Título para Bebidas -->
    <TextView
        android:id="@+id/tvBebidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bebidas"
        android:textColor="@color/atributos"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/llPicanhaBrasa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/atributos"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/tvBebidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Opção: Coca-cola -->
    <LinearLayout
        android:id="@+id/llCocaCola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvBebidas"
        android:layout_marginTop="8dp"
        android:textColor="@color/name_cabecalho"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <CheckBox
            android:id="@+id/cbCocaCola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@android:color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coca_cola"
            android:layout_weight="@integer/valor_coca_cola"
            android:textColor="@color/name_cabecalho"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Opção: Água -->
    <LinearLayout
        android:id="@+id/llAgua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llCocaCola"
        android:layout_marginTop="5dp"
        android:textColor="@color/name_cabecalho"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">

        <CheckBox
            android:id="@+id/cbAgua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@android:color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agua"
            android:layout_weight="@integer/valor_agua"
            android:textColor="@color/name_cabecalho"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <!-- TextView para exibir o total do pedido -->
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="7dp"
        android:layout_height="3dp"
        android:layout_marginTop="6dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llAgua" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/atributos"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_pedido"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/llButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCalcularTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_total_pedido"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnEnviarPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_pedido"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>
